--- a/app/src/main/res/layout/fragment_newrequest.xml
+++ b/app/src/main/res/layout/fragment_newrequest.xml
@@ -3,56 +3,51 @@
     >
 
 
-    <RelativeLayout
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swiperefresh"
         style="@style/BothMatch"
-        android:background="@color/mercury">
+        >
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swiperefresh"
+        <RelativeLayout
             style="@style/BothMatch"
-            >
+            android:background="@color/mercury">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/request_textview"
+                style="@style/BothWrap"
+                android:layout_centerInParent="true"
+                android:text="No RequestItems"
+                android:visibility="gone"
+                />
+            <!--   <com.facebook.shimmer.ShimmerFrameLayout
+                   android:id="@+id/effect_shimmer"
+                   style="@style/BothMatch">
 
-                <TextView
-                    android:id="@+id/request_textview"
-                    style="@style/BothMatch"
-                    android:gravity="center"
-                    android:text="No RequestItems"
-                    android:visibility="gone"
-                    />
-             <!--   <com.facebook.shimmer.ShimmerFrameLayout
-                    android:id="@+id/effect_shimmer"
-                    style="@style/BothMatch">
+                   <LinearLayout
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                       <include layout="@layout/item_shimmer_view"/>
 
-                        <include layout="@layout/item_shimmer_view"/>
+                       <include layout="@layout/item_shimmer_view"/>
 
-                        <include layout="@layout/item_shimmer_view"/>
+                       <include layout="@layout/item_shimmer_view"/>
 
-                        <include layout="@layout/item_shimmer_view"/>
+                       <include layout="@layout/item_shimmer_view"/>
 
-                        <include layout="@layout/item_shimmer_view"/>
+                   </LinearLayout>
+               </com.facebook.shimmer.ShimmerFrameLayout>-->
 
-                    </LinearLayout>
-                </com.facebook.shimmer.ShimmerFrameLayout>-->
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/request_recyclerview"
+                style="@style/MatchWrap"
+                android:layout_marginTop="@dimen/margin_10"
+                android:fadeScrollbars="false"
+                android:scrollbarSize="4dp"
+                android:scrollbarThumbVertical="@drawable/scrollbar"
+                android:scrollbars="vertical"/>
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/request_recyclerview"
-                    style="@style/MatchWrap"
-                    android:layout_marginTop="@dimen/margin_10"
-                    android:fadeScrollbars="false"
-                    android:scrollbarSize="4dp"
-                    android:scrollbarThumbVertical="@drawable/scrollbar"
-                    android:scrollbars="vertical"/>
-            </LinearLayout>
-
-        </android.support.v4.widget.SwipeRefreshLayout>
-    </RelativeLayout>
+        </RelativeLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </layout>
