--- a/app/src/main/res/layout/item_checkup_fragment.xml
+++ b/app/src/main/res/layout/item_checkup_fragment.xml
@@ -113,6 +113,8 @@
                     android:textColor="@color/ebony_clay"
                     android:textSize="12.4sp"/>
 
+                <!--emp name-->
+
             </RelativeLayout>
             <!--Dummy view for showing selection-->
             <ImageView
