--- a/app/src/main/res/layout/fragment_newrequest.xml
+++ b/app/src/main/res/layout/fragment_newrequest.xml
@@ -12,13 +12,7 @@
             style="@style/BothMatch"
             android:background="@color/mercury">
 
-            <TextView
-                android:id="@+id/request_textview"
-                style="@style/BothWrap"
-                android:layout_centerInParent="true"
-                android:text="No RequestItems"
-                android:visibility="gone"
-                />
+
             <!--   <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/effect_shimmer"
                    style="@style/BothMatch">
@@ -47,6 +41,15 @@
                 android:scrollbarSize="4dp"
                 android:scrollbarThumbVertical="@drawable/scrollbar"
                 android:scrollbars="vertical"/>
+
+            <TextView
+                android:id="@+id/request_textview"
+                style="@style/BothWrap"
+                android:layout_centerInParent="true"
+                android:text="No RequestItems"
+                android:textColor="@color/black"
+                android:visibility="gone"
+                />
 
         </RelativeLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
