--- a/app/src/main/res/layout/fragment_repair.xml
+++ b/app/src/main/res/layout/fragment_repair.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    >
-
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <RelativeLayout
         style="@style/BothMatch"
@@ -9,8 +7,7 @@
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swiperefresh"
-            style="@style/BothMatch"
-            >
+            style="@style/BothMatch">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -21,17 +18,35 @@
                     style="@style/BothMatch"
                     android:gravity="center"
                     android:text="No RepairItems"
-                    android:visibility="gone"
-                    />
+                    android:visibility="gone" />
+
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/effect_shimmer"
+                    style="@style/BothMatch">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <include layout="@layout/item_shimmer_view" />
+
+                        <include layout="@layout/item_shimmer_view" />
+
+                        <include layout="@layout/item_shimmer_view" />
+
+                        <include layout="@layout/item_shimmer_view" />
+
+                    </LinearLayout>
+                </com.facebook.shimmer.ShimmerFrameLayout>
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/request_recyclerview"
                     style="@style/MatchWrap"
-                    android:layout_marginTop="@dimen/margin_10"
                     android:fadeScrollbars="false"
                     android:scrollbarSize="4dp"
                     android:scrollbarThumbVertical="@drawable/scrollbar"
-                    android:scrollbars="vertical"/>
+                    android:scrollbars="vertical" />
             </LinearLayout>
 
         </android.support.v4.widget.SwipeRefreshLayout>
