--- a/app/src/main/res/layout/item_new_request_fragment.xml
+++ b/app/src/main/res/layout/item_new_request_fragment.xml
@@ -117,8 +117,7 @@
             <!--Dummy view for showing selection-->
             <ImageView
                 android:id="@+id/views_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                style="@style/BothMatch"
                 android:background="@color/alpha_corn_flower_red" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
