--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -95,5 +95,6 @@
     <color name="orange">#FFA500</color>
     <color name="green">#00ff00</color>
     <color name="red">#ff0000</color>
+    <color name="gray_30">#4d4d4d</color>
 
 </resources>
