--- a/app/src/main/res/layout/item_new_request_fragment.xml
+++ b/app/src/main/res/layout/item_new_request_fragment.xml
@@ -22,7 +22,7 @@
         <RelativeLayout
             android:id="@+id/layout_request_item"
             android:layout_width="match_parent"
-            android:layout_height="120dp">
+            android:layout_height="130dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -86,7 +86,7 @@
                     android:layout_width="80dp"
                     android:layout_below="@+id/text_complaint"
                     android:layout_toRightOf="@id/product_imageview"
-                    android:text="@={fetchNewRequestResponse.customer.location}"
+                    android:text="@{`Location : ` + fetchNewRequestResponse.customer.location}"
                     android:textColor="@color/ebony_clay"
                     android:textSize="10sp" />
 
@@ -108,6 +108,16 @@
                     android:layout_below="@+id/text_waranty_status"
                     android:layout_toRightOf="@id/product_imageview"
                     android:text="@={fetchNewRequestResponse.product.modelNo}"
+                    android:textColor="@color/ebony_clay"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/text_assigned"
+                    style="@style/BothWrap"
+                    android:layout_width="80dp"
+                    android:layout_below="@+id/text_attending_date_time"
+                    android:layout_toRightOf="@id/product_imageview"
+                    android:text="Assigned"
                     android:textColor="@color/ebony_clay"
                     android:textSize="10sp" />
 
