--- a/app/src/main/res/layout/item_new_request_fragment.xml
+++ b/app/src/main/res/layout/item_new_request_fragment.xml
@@ -22,7 +22,7 @@
         <RelativeLayout
             android:id="@+id/layout_request_item"
             android:layout_width="match_parent"
-            android:layout_height="140dp">
+            android:layout_height="150dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -46,7 +46,7 @@
                     android:id="@+id/product_name"
                     style="@style/BothWrap"
                     fontPath="fonts/OpenSans-Bold.ttf"
-                    android:layout_marginTop="@dimen/margin_5"
+                    android:layout_marginTop="@dimen/margin_3"
                     android:layout_toRightOf="@id/product_imageview"
                     android:maxLines="2"
                     android:text="@={fetchNewRequestResponse.product.name}"
@@ -58,7 +58,7 @@
                     android:id="@+id/model_number"
                     style="@style/BothWrap"
                     android:layout_below="@+id/product_name"
-                    android:layout_marginTop="@dimen/margin_5"
+                    android:layout_marginTop="@dimen/margin_3"
                     android:layout_toRightOf="@id/product_imageview"
                     android:maxLines="2"
                     android:text="@={fetchNewRequestResponse.product.modelNo}"
@@ -71,7 +71,7 @@
                     android:id="@+id/text_complaint"
                     style="@style/BothWrap"
                     android:layout_below="@+id/model_number"
-                    android:layout_marginTop="@dimen/margin_5"
+                    android:layout_marginTop="@dimen/margin_3"
                     android:layout_toRightOf="@id/product_imageview"
                     android:maxLines="2"
                     android:text="@={fetchNewRequestResponse.product.modelNo}"
@@ -83,10 +83,10 @@
                 <TextView
                     android:id="@+id/text_location"
                     style="@style/BothWrap"
-                    android:layout_width="80dp"
                     android:layout_below="@+id/text_complaint"
+                    android:layout_marginTop="@dimen/margin_3"
                     android:layout_toRightOf="@id/product_imageview"
-                    android:text="@{`Location : ` + fetchNewRequestResponse.customer.location}"
+                    android:text="@{`Location : ` + fetchNewRequestResponse.serviceCenter.address}"
                     android:textColor="@color/ebony_clay"
                     android:textSize="10sp" />
 
@@ -94,8 +94,8 @@
                 <TextView
                     android:id="@+id/text_waranty_status"
                     style="@style/BothWrap"
-                    android:layout_width="80dp"
                     android:layout_below="@+id/text_location"
+                    android:layout_marginTop="@dimen/margin_3"
                     android:layout_toRightOf="@id/product_imageview"
                     android:text="@={fetchNewRequestResponse.product.modelNo}"
                     android:textColor="@color/ebony_clay"
@@ -104,7 +104,7 @@
                 <TextView
                     android:id="@+id/text_attending_date_time"
                     style="@style/BothWrap"
-                    android:layout_width="80dp"
+                    android:layout_marginTop="@dimen/margin_3"
                     android:layout_below="@+id/text_waranty_status"
                     android:layout_toRightOf="@id/product_imageview"
                     android:text="@={fetchNewRequestResponse.product.modelNo}"
@@ -114,7 +114,6 @@
                 <TextView
                     android:id="@+id/text_assigned"
                     style="@style/BothWrap"
-                    android:layout_width="80dp"
                     android:layout_below="@+id/text_attending_date_time"
                     android:layout_toRightOf="@id/product_imageview"
                     android:text="Assigned"
