--- a/app/src/main/res/layout/item_approval_fragment.xml
+++ b/app/src/main/res/layout/item_approval_fragment.xml
@@ -19,7 +19,12 @@
         <RelativeLayout
             android:id="@+id/layout_checkup_item"
             android:layout_width="match_parent"
-            android:layout_height="120dp">
+            android:layout_height="160dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/margin_8">
             <!--brand image-->
             <ImageView
                 android:id="@+id/brand_imageview"
@@ -40,7 +45,7 @@
                 android:id="@+id/product_name"
                 style="@style/BothWrap"
                 fontPath="fonts/OpenSans-Bold.ttf"
-                android:layout_marginTop="@dimen/margin_5"
+                android:layout_marginTop="@dimen/margin_3"
                 android:layout_toRightOf="@id/product_imageview"
                 android:maxLines="2"
                 android:text="@={fetchNewRequestResponse.product.name}"
@@ -52,58 +57,61 @@
                 android:id="@+id/model_number"
                 style="@style/BothWrap"
                 android:layout_below="@+id/product_name"
-                android:layout_marginTop="@dimen/margin_5"
+                android:layout_marginTop="@dimen/margin_3"
                 android:layout_toRightOf="@id/product_imageview"
                 android:maxLines="2"
                 android:text="@={fetchNewRequestResponse.product.modelNo}"
                 android:textAllCaps="true"
                 android:textColor="@color/ebony_clay"
-                android:textSize="12.4sp" />
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/text_complaint"
                 style="@style/BothWrap"
                 android:layout_below="@+id/model_number"
-                android:layout_marginTop="@dimen/margin_5"
+                android:layout_marginTop="@dimen/margin_3"
                 android:layout_toRightOf="@id/product_imageview"
                 android:maxLines="2"
                 android:text="@={fetchNewRequestResponse.product.modelNo}"
                 android:textAllCaps="true"
                 android:textColor="@color/ebony_clay"
-                android:textSize="12.4sp" />
+                android:textSize="10sp" />
 
 
             <!--location-->
             <TextView
                 android:id="@+id/text_location"
                 style="@style/BothWrap"
-                android:layout_width="80dp"
                 android:layout_below="@+id/text_complaint"
                 android:layout_toRightOf="@id/product_imageview"
                 android:textColor="@color/ebony_clay"
-                android:text="@={fetchNewRequestResponse.customer.location}"
-                android:textSize="12.4sp" />
+                android:text="@{`Location : ` + fetchNewRequestResponse.serviceCenter.address}"
+                android:textSize="10sp" />
 
             <!--warrenty status-->
             <TextView
                 android:id="@+id/text_waranty_status"
                 style="@style/BothWrap"
-                android:layout_width="80dp"
                 android:text="@={fetchNewRequestResponse.product.modelNo}"
                 android:layout_below="@+id/text_location"
                 android:layout_toRightOf="@id/product_imageview"
                 android:textColor="@color/ebony_clay"
-                android:textSize="12.4sp" />
+                android:textSize="10sp" />
             <!--attending date and time-->
             <TextView
                 android:id="@+id/text_attending_date_time"
                 style="@style/BothWrap"
                 android:text="@={fetchNewRequestResponse.product.modelNo}"
-                android:layout_width="80dp"
                 android:layout_below="@+id/text_waranty_status"
                 android:layout_toRightOf="@id/product_imageview"
                 android:textColor="@color/ebony_clay"
-                android:textSize="12.4sp" />
+                android:textSize="10sp" />
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/views_layout"
+            style="@style/BothMatch"
+            android:background="@color/alpha_corn_flower_red" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </layout>
