--- a/app/src/main/res/layout/item_new_request_fragment.xml
+++ b/app/src/main/res/layout/item_new_request_fragment.xml
@@ -114,6 +114,7 @@
                 <TextView
                     android:id="@+id/text_assigned"
                     style="@style/BothWrap"
+                    android:layout_marginTop="@dimen/margin_3"
                     android:layout_below="@+id/text_attending_date_time"
                     android:layout_toRightOf="@id/product_imageview"
                     android:text="Assigned"
