--- a/app/src/main/res/layout/item_repair_fragment.xml
+++ b/app/src/main/res/layout/item_repair_fragment.xml
@@ -19,7 +19,7 @@
         <RelativeLayout
             android:id="@+id/layout_request_item"
             android:layout_width="match_parent"
-            android:layout_height="120dp">
+            android:layout_height="160dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -31,7 +31,6 @@
                 android:layout_height="32dp"
                 android:layout_marginLeft="@dimen/margin_10"
                 android:alpha="70"
-                app:srcCompat="@drawable/ic_placeholder"
                 />
             <!--product image-->
             <ImageView
@@ -39,13 +38,13 @@
                 style="@style/image_product_icon"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/brand_imageview"
-                app:srcCompat="@drawable/ic_placeholder" />
+                />
             <!--product name-->
             <TextView
                 android:id="@+id/product_name"
                 style="@style/BothWrap"
                 fontPath="fonts/OpenSans-Bold.ttf"
-                android:layout_marginTop="@dimen/margin_5"
+                android:layout_marginTop="@dimen/margin_3"
                 android:layout_toRightOf="@id/product_imageview"
                 android:maxLines="2"
                 android:text="@={fetchNewRequestResponse.product.name}"
@@ -57,48 +56,48 @@
                 android:id="@+id/model_number"
                 style="@style/BothWrap"
                 android:layout_below="@+id/product_name"
-                android:layout_marginTop="@dimen/margin_5"
+                android:layout_marginTop="@dimen/margin_3"
                 android:layout_toRightOf="@id/product_imageview"
                 android:maxLines="2"
                 android:text="@={fetchNewRequestResponse.product.modelNo}"
                 android:textAllCaps="true"
                 android:textColor="@color/ebony_clay"
-                android:textSize="12.4sp" />
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/text_complaint"
                 style="@style/BothWrap"
                 android:layout_below="@+id/model_number"
-                android:layout_marginTop="@dimen/margin_5"
+                android:layout_marginTop="@dimen/margin_3"
                 android:layout_toRightOf="@id/product_imageview"
                 android:maxLines="2"
                 android:text="@={fetchNewRequestResponse.product.modelNo}"
                 android:textAllCaps="true"
                 android:textColor="@color/ebony_clay"
-                android:textSize="12.4sp" />
+                android:textSize="10sp" />
 
 
             <!--location-->
             <TextView
                 android:id="@+id/text_location"
                 style="@style/BothWrap"
-                android:layout_width="80dp"
+                android:layout_marginTop="@dimen/margin_3"
                 android:layout_below="@+id/text_complaint"
                 android:layout_toRightOf="@id/product_imageview"
                 android:textColor="@color/ebony_clay"
-                android:text="@={fetchNewRequestResponse.customer.location}"
-                android:textSize="12.4sp" />
+                android:text="@{`Location : ` + fetchNewRequestResponse.serviceCenter.address}"
+                android:textSize="10sp" />
 
             <!--warrenty status-->
             <TextView
                 android:id="@+id/text_waranty_status"
                 style="@style/BothWrap"
-                android:layout_width="80dp"
+                android:layout_marginTop="@dimen/margin_3"
                 android:text="@={fetchNewRequestResponse.product.modelNo}"
                 android:layout_below="@+id/text_location"
                 android:layout_toRightOf="@id/product_imageview"
                 android:textColor="@color/ebony_clay"
-                android:textSize="12.4sp" />
+                android:textSize="10sp" />
         </RelativeLayout>
             <!--Dummy view for showing selection-->
             <ImageView
