1.Created Hold,Terminated,Compleated Fragments and releted xml, adapters class

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -14,6 +14,9 @@
         <item>@string/tab_approval</item>
         <item>@string/tab_repair</item>
         <item>@string/tab_payment</item>
+        <item>@string/tab_hold</item>
+        <item>@string/tab_terminate</item>
+        <item>@string/tab_compleat</item>
     </string-array>
 
     <!-- Gender dropdown options -->
