--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -33,5 +33,7 @@
     <item type="id" name="STATUS_UPDATE_MOVE_TO"/>
     <item type="id" name="STATUS_UPDATE_EDIT_TIME"/>
 
+    <item type="id" name="MANUAL_APPROACH"/>
+
 
 </resources>
