1. Fixed completed typo error

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -16,7 +16,7 @@
         <item>@string/tab_payment</item>
         <item>@string/tab_hold</item>
         <item>@string/tab_terminate</item>
-        <item>@string/tab_compleat</item>
+        <item>@string/tab_completed</item>
     </string-array>
 
     <!-- Gender dropdown options -->
