--- a/app/src/main/res/layout/status_view.xml
+++ b/app/src/main/res/layout/status_view.xml
@@ -1,55 +1,50 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-    <data>
-        <variable
-            name="requests"
-            type="com.incon.service.ui.status.fragment.NewRequestsFragment"/>
-    </data>
-
     <LinearLayout
         style="@style/BothMatch"
+        android:layout_width="74dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/view_layout"
-            style="@style/BothWrap"
-            android:layout_gravity="center"
+            style="@style/MatchWrap"
             android:orientation="horizontal">
 
+            <View
+                android:layout_marginTop="@dimen/margin_20"
+                android:id="@+id/view_left_line"
+                android:layout_width="40dp"
+                android:layout_height="3dp"
+                android:layout_gravity="center"
+                android:background="@color/astral_alpha"/>
+
             <ImageView
+                android:layout_marginTop="@dimen/margin_40"
                 android:id="@+id/view_logo"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                app:srcCompat="@drawable/ic_tab_notifications" />
+                android:layout_width="8dp"
+                android:layout_height="8dp"
+                app:srcCompat="@drawable/circle_shape"/>
 
             <View
-                android:id="@+id/view"
-                android:layout_width="35dp"
-                android:layout_height="5dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/red" />
+                android:layout_marginTop="@dimen/margin_20"
+                android:id="@+id/view_right_line"
+                android:layout_width="40dp"
+                android:layout_height="3dp"
+                android:layout_gravity="center"
+                android:background="@color/astral_alpha"/>
 
         </LinearLayout>
 
-      <!--  <LinearLayout
 
-            style="@style/BothWrap"
-            android:layout_gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/view_tv"
-                style="@style/BothWrap"
-                android:layout_gravity="center_horizontal"
-                android:padding="@dimen/margin_5"
-                android:text="ramu mupparju"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_10" />
-
-        </LinearLayout>-->
-
+        <TextView
+            android:id="@+id/view_tv"
+            style="@style/MatchWrap"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:padding="@dimen/margin_5"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_10"/>
 
     </LinearLayout>
 </layout>
